--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="min-height: 100vh; background-color: #02010A"></div>
+    <div id="root" style="min-height: 100vh; background-color: #4266a4"></div>
   </body>
 </html>
